src/styles/tailwind.scss
/* * {
	outline: 1px solid red;
} */

* {
	font-family: "Raleway", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

@tailwind base;

@tailwind components;
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Ubuntu", sans-serif;
	@apply tracking-tight leading-tight;
}

h1 {
	@apply font-bold text-3xl;

	@screen md {
		@apply text-4xl;
	}
}

h2 {
	@apply font-semibold text-2xl;

	@screen md {
		@apply text-3xl;
	}
}

h3 {
	@apply font-semibold text-xl;

	@screen md {
		@apply text-2xl;
	}
}

h4 {
	@apply font-semibold text-lg;

	@screen md {
		@apply text-xl;
	}
}

h5 {
	@apply font-semibold text-base;

	@screen md {
		@apply text-lg;
	}
}

h6 {
	@apply font-semibold text-sm;

	@screen md {
		@apply text-base;
	}
}

a {
	@apply opacity-75;
	&:hover {
		@apply opacity-100 transition ease-in-out duration-300;
	}
}

.animateProgressBar {
	animation: load 2s 0s;
	width: calc(100%);
	transition-timing-function: ease-in-out;
}

@keyframes load {
	from {
		width: 0%;
	}
}
@tailwind utilities;

